<resources>
    <string name="app_name">Calculator</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="reg">Register</string>
    <string name="hint_user">Username...</string>
    <string name="hint_pass">Password...</string>
    <string name="login">LogIn</string>
    <string name="tlf">Phone number</string>
    <string name="uni">College</string>
    <string name="temp">Timer : </string>
    <string name="res">Restart</string>
    <string name="dialog_title"> Paused Game</string>
    <string name="dialog_message">Game is paused, take your time.</string>
    <string name="resume">RESUME</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navi">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="calculator">Calculator</string>
    <string name="ranking">Ranking</string>
    <string name="music">Music</string>
    <string name="settings">Settings</string>
    <string name="memory">Memory</string>

</resources>
