<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/calculator_icon"
            android:title="@string/calculator" />
        <item
            android:id="@+id/nav_memory"
            android:icon="@drawable/cards_icon"
            android:title="@string/memory" />
        <item
            android:id="@+id/nav_ranking"
            android:icon="@drawable/ranking_icon"
            android:title="@string/ranking" />
        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/music_icon"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
    </group>


</menu>
