<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:textSize="30sp"
        android:text="@string/dialog_title"
        android:textColor="@color/dialog"
        android:padding="5dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="41dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        android:text="@string/dialog_message"
        android:textColor="@color/primary_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnResume"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_title"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnResume"
        android:layout_width="122dp"
        android:layout_height="58dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@null"
        android:text="@string/resume"
        android:textColor="@color/dialog"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.878"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="197dp"
        tools:ignore="MissingConstraints" />
</android.support.constraint.ConstraintLayout>